master: new functionality.