@@ -1,45 +1,52 @@
 package ru.alex3koval.notificationService.storage;
 
 import io.r2dbc.spi.ConnectionFactory;
+import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
+import org.springframework.data.r2dbc.config.EnableR2dbcAuditing;
 import org.springframework.data.r2dbc.convert.R2dbcCustomConversions;
-import org.springframework.data.r2dbc.core.R2dbcEntityTemplate;
 import org.springframework.data.r2dbc.dialect.PostgresDialect;
-import org.springframework.data.r2dbc.dialect.R2dbcDialect;
+import org.springframework.data.r2dbc.repository.config.EnableR2dbcRepositories;
+import ru.alex3koval.notificationService.storage.converter.eventStatus.ReadingEventStatusConverter;
+import ru.alex3koval.notificationService.storage.converter.eventStatus.WritingEventStatusConverter;
+import ru.alex3koval.notificationService.storage.converter.mailFormat.ReadingMailFormatConverter;
+import ru.alex3koval.notificationService.storage.converter.mailFormat.WritingMailFormatConverter;
+import ru.alex3koval.notificationService.storage.converter.sendingReason.ReadingSendingReasonConverter;
+import ru.alex3koval.notificationService.storage.converter.sendingReason.WritingSendingReasonConverter;
 import ru.alex3koval.notificationService.storage.converter.sendingRecipient.ReadingSendingRecipientConverter;
 import ru.alex3koval.notificationService.storage.converter.sendingRecipient.WritingSendingRecipientConverter;
-import ru.alex3koval.notificationService.storage.converter.sendingStatus.ReadingSendingStatusConverter;
-import ru.alex3koval.notificationService.storage.converter.sendingStatus.WritingSendingStatusConverter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
+@EnableR2dbcRepositories("ru.alex3koval.notificationService.storage.repository.orm")
+@EntityScan("ru.alex3koval.notificationService.storage.entity")
+@EnableR2dbcAuditing
 public class StorageConfiguration {
     @Bean
-    public R2dbcDialect dialect() {
-        return PostgresDialect.INSTANCE;
-    }
-
-    @Bean
-    R2dbcEntityTemplate r2dbcEntityTemplate(ConnectionFactory connectionFactory) {
-        return new R2dbcEntityTemplate(connectionFactory);
-    }
-
-    @Bean
-    public R2dbcCustomConversions r2dbcCustomConversions(R2dbcDialect dialect) {
-        List<Converter<?, ?>> converters = List.of(
-            new WritingSendingStatusConverter(),
-            new ReadingSendingStatusConverter(),
-
+    public R2dbcCustomConversions r2dbcCustomConversions() {
+        List<Converter<?, ?>> converters = Arrays.asList(
             new WritingSendingRecipientConverter(),
             new ReadingSendingRecipientConverter(),
 
-            new WritingSendingStatusConverter(),
-            new ReadingSendingStatusConverter()
+            new WritingSendingReasonConverter(),
+            new ReadingSendingReasonConverter(),
+
+            new WritingEventStatusConverter(),
+            new ReadingEventStatusConverter(),
+
+            new WritingMailFormatConverter(),
+            new ReadingMailFormatConverter()
         );
 
-        return R2dbcCustomConversions.of(dialect, converters);
+        return R2dbcCustomConversions.of(PostgresDialect.INSTANCE, converters);
+    }
+
+    @Bean
+    DbCheckAppRunner dbCheckAppRunner(ConnectionFactory connectionFactory) {
+        return new DbCheckAppRunner(connectionFactory);
     }
 }
